fix: top menu bar select and sort spacing

--- a/pages/media-library/index.scss
+++ b/pages/media-library/index.scss
@@ -49,7 +49,7 @@
 
 	.button-group {
 		display: flex;
-		gap: 1.25rem;
+		gap: 1rem;
 		width: 100%;
 		justify-content: space-between;
 	}
@@ -64,6 +64,8 @@
 		background: #fff;
 		border: 1px solid #A3A3A3;
 		box-shadow: none;
+		width: 100%;
+		justify-content: center;
 
 		&:hover {
 			background: #F5F5F5;
